feat: add images enpoints
